--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        Hello world From Yasin
+        Hello world From <s>Yasin</s>Yasin Afridi
     </div>
     
 </body>
